--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
     "buildCommand" : "cd client && npm install && ./node_modules/vite/bin/vite.js build" , 
     "outputDirectory" : "client/dist" ,
     "framework" : "vite",
+    "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
     "rewrites" : [
         {
             "source" : "/api/(.*)",
