--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,7 @@
             "source" : "/api/(.*)",
             "destination" : "/api/index.js"
         }
-    ]
+    ],
+    "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
+
 }
