fixed vercel by adding rewrites removing /client

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
         },
         {
             "source" : "/(.*)",
-            "destination": "client/index.html"
+            "destination": "/index.html"
         }
     ]
 }
